# SPDX-FileCopyrightText: 2022 HH Partners
#
# SPDX-License-Identifier: MIT

[package]
name = "spdx-expression"
version = "0.4.0"
authors = ["Mikko Murto <mikko.murto@hhpartners.fi>"]
edition = "2018"
license = "MIT"
description = "SPDX Expression"
homepage = "https://github.com/doubleopen-project/spdx-expression"
repository = "https://github.com/doubleopen-project/spdx-expression"
documentation = "https://docs.rs/spdx-expression"
readme = "README.md"
keywords = ["SPDX"]
categories = ["data-structures"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7"
thiserror = "1"
tracing = "0.1"
serde = "1"

[dev-dependencies]
pretty_assertions = "1"
tracing-subscriber = "0.3"
serde_json = "1"
